<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoundEffectSeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/vv_remote_users"
        android:layout_below="@+id/ll_top_title"
        android:layout_marginBottom="1dp"
        android:background="@color/black">

        <com.netease.lava.nertc.sdk.video.NERtcVideoView
            android:id="@+id/vv_local_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/btn_back" />

        <TextView
            android:id="@+id/tv_room_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/change_voice"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_edit_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bgm_roomid"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_room_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_edit_bg"
                android:paddingLeft="5dp"
                android:text="1383" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bgm_userid"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_edit_bg"
                android:paddingLeft="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_join_channel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@+id/ll_set"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_button_bg"
            android:text="@string/bgm_join_channel"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vv_remote_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_effect1"
        android:background="@color/black"
        android:orientation="horizontal">

        <com.netease.lava.nertc.sdk.video.NERtcVideoView
            android:id="@+id/vv_remote_user_1"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp" />

        <com.netease.lava.nertc.sdk.video.NERtcVideoView
            android:id="@+id/vv_remote_user_2"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp" />

        <com.netease.lava.nertc.sdk.video.NERtcVideoView
            android:id="@+id/vv_remote_user_3"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp" />

        <com.netease.lava.nertc.sdk.video.NERtcVideoView
            android:id="@+id/vv_remote_user_4"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_effect1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/ll_effect2"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bgm_select_voice_change_effect"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_vocie_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/base_blue"
                android:padding="0dp"
                android:text="@string/bgm_default"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_vocie_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/bgm_voice_2"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_vocie_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/bgm_voice_3"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/btn_vocie_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/bgm_voice_4"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/btn_vocie_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/bgm_voice_5"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_effect2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/ll_edit_info"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bgm_select_Reverberation_effect"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_effect_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/base_blue"
                android:padding="0dp"
                android:text="@string/bgm_default"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_effect_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/btn_effect_2"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_effect_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/btn_effect_3"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/btn_effect_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/btn_effect_4"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/btn_effect_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/button_select_off"
                android:padding="0dp"
                android:text="@string/btn_effect_5"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>